--- a/src/blocks/element/__like-button/element__like-button.css
+++ b/src/blocks/element/__like-button/element__like-button.css
@@ -2,7 +2,7 @@
   padding-right: 16px;
   background: transparent url(../../../images/heart.svg);
   background-repeat: no-repeat;
-  margin: auto 20px auto 21px;
+  margin: 22px 20px auto 21px;
   width: 22px;
   height: 19px;
   background-size: cover;
@@ -10,8 +10,4 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 450px) {
-  .element__like-button {
-    margin-top: 30px;
-  }
-}
+
