--- a/src/blocks/form/__save-btn/_submit/form__save-btn_submit.css
+++ b/src/blocks/form/__save-btn/_submit/form__save-btn_submit.css
@@ -1,14 +1,16 @@
-.form__save-btn_submit {cursor: pointer;
+.form__save-btn_submit {
+  cursor: pointer;
   background: #000000;
   color: #ffffff;
-  opacity: 1;}
+  opacity: 1;
+}
 
   @media screen and (max-width: 450px) {
     .form__save-btn_submit {
       text-align: center;
       margin-top: 60px;
       max-width: 282px;
-      max-height: 322px
+      max-height: 322px;
     }
   }
 
