--- a/src/blocks/form/__save-btn/_submit/form__save_btn_submit.css
+++ b/src/blocks/form/__save-btn/_submit/form__save_btn_submit.css
@@ -1,4 +1,4 @@
-.form__save-btn_submit {
+.form__save_btn_submit {
   cursor: pointer;
   background: #000000;
   color: #ffffff;
@@ -6,7 +6,7 @@
 }
 
   @media screen and (max-width: 450px) {
-    .form__save-btn_submit {
+    .form__save_btn_submit {
       text-align: center;
       margin-top: 60px;
       max-width: 282px;
