--- a/src/blocks/form/__save-btn/form__save_btn.css
+++ b/src/blocks/form/__save-btn/form__save_btn.css
@@ -1,4 +1,4 @@
-.form__save-btn {
+.form__save_btn {
   width: 358px;
   height: 50px;
   color: #000000;
@@ -17,7 +17,7 @@
 }
 
 @media screen and (max-width: 450px) {
-  .form__save-btn {
+  .form__save_btn {
     margin-top: 40px;
     width: 238px;
     height: 46px;
