--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -52,3 +52,4 @@
 @import url(../blocks/popup-submit/popup-submit.css);
 @import url(../blocks/popup/__container/_submit/popup__container_submit.css);
 @import url(../blocks/popup/__title/_submit/popup__title_submit.css);
+@import url(../blocks/popup/__save-btn/popup__save-btn.css);
