--- a/main.css
+++ b/main.css
@@ -632,6 +632,7 @@ template {
   justify-content: space-between;
   background-color: #ffffff;
   height: 79px;
+  position: relative;
 }
 
 .element__image {
@@ -644,7 +645,7 @@ template {
   padding-right: 16px;
   background: transparent url(87ed371465c7a6a1cd01.svg);
   background-repeat: no-repeat;
-  margin: auto 20px auto 21px;
+  margin: 22px 20px auto 21px;
   width: 22px;
   height: 19px;
   background-size: cover;
@@ -652,11 +653,7 @@ template {
   cursor: pointer;
 }
 
-@media screen and (max-width: 450px) {
-  .element__like-button {
-    margin-top: 30px;
-  }
-}
+
 
 .element__text {
   padding: auto;
@@ -991,7 +988,6 @@ template {
 }
 
 .profile__picture {
-  width: 120px;
   height: 120px;
   position: relative;
   width: max-content;
@@ -1025,10 +1021,74 @@ template {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  cursor: pointer;
 }
 
 .popup__container_avatar {
   height: 272px;
+}
+
+.element__like-counter {
+  position: absolute;
+    right:26px;
+    top: 44px;
+    width: 10px;
+    height: 13px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 16px;
+    text-align: center;
+    color: #000000;
+}
+
+.popup-submit {
+
+}
+
+.popup__container_submit {
+    height: 181px;
+  width: 430px;
+}
+
+@media screen and (max-width: 450px) {
+  .popup__container_submit {
+    width: 282px;
+    max-height: 322px;
+    padding: 25px 22px 10px;
+  }
+}
+
+.popup__title_submit {
+    margin-bottom: 0;
+}
+
+.popup__save-btn {
+  width: 358px;
+  height: 50px;
+  color: #ffffff;
+  background: #000000;
+  padding: 0;
+  margin-top: 41px;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  border-radius: 2px;
+  border: 1px solid #000000;
+}
+
+@media screen and (max-width: 450px) {
+  .popup__save-btn {
+    margin-top: 40px;
+    width: 238px;
+    height: 46px;
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
 
 
